--- a/frontend/realstate/src/index.html
+++ b/frontend/realstate/src/index.html
@@ -14,6 +14,11 @@
   <!-- Icon Font Stylesheet -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
+  
+  <!-- Bootstrap -->
+  <link rel="stylesheet" href="/src/app/styles/bootstrap.scss">
+  <link rel="stylesheet" href="/src/app/styles/css/style.css">
+
 </head>
 <body>
   <app-root></app-root>
